--- a/bundles/pyml/Makefile
+++ b/bundles/pyml/Makefile
@@ -23,24 +23,21 @@ PYML_COMPAT=$(shell \
 
 include ../Makefile.bundles
 
-$(SRC_DIR)/pywrappers.ml $(SRC_DIR)/pyml_wrappers.inc: \
+$(SRC_DIR)/pywrappers.ml \
+$(SRC_DIR)/pyml_wrappers.inc: \
 		$(MARKER) $(SRC_DIR)/generate
 	cd $(SRC_DIR) && ./generate
+
+$(SRC_DIR)/pyml_wrappers.inc: $(SRC_DIR)/pywrappers.ml
 
 .prepare: $(SRC_DIR)/pywrappers.ml $(SRC_DIR)/pywrappers.mli
 	touch .prepare
 
 $(SRC_DIR)/pyml_stubs.o: $(SRC_DIR)/pyml_stubs.c $(SRC_DIR)/pyml_wrappers.inc
 
-$(SRC_DIR)/pyml_compat.mli: $(MARKER)
-	touch $@
-
-$(SRC_DIR)/$(PYML_COMPAT): $(MARKER)
-	touch $@
-
-$(SRC_DIR)/generate.ml: $(MARKER)
-	touch $@
-
+$(SRC_DIR)/pyml_compat.mli \
+$(SRC_DIR)/$(PYML_COMPAT) \
+$(SRC_DIR)/generate.ml \
 $(SRC_DIR)/pytypes.mli: $(MARKER)
 	touch $@
 
