Fixed: Bundles compilation and pyml update
- %.cmx: %.cmo dependency (with .ml files that do not have .mli,
  compiling the .ml into .cmo or into .cmx both write to the same .cmi
  file, so that cannot be done concurrently)
- untarred pyml distribution to ease updates
- Python exception catched in pycocci interface

--- a/bundles/Makefile.bundles
+++ b/bundles/Makefile.bundles
@@ -51,10 +51,6 @@ clean:
 	rm -f $(patsubst %,$(SRC_DIR)/%.cmx,$(MODULES))
 	rm -f $(patsubst %,$(SRC_DIR)/%.cmo,$(MODULES))
 
-distclean: clean
-	rm -rf $(PACKAGE_DIR)
-	rm -f .prepare
-
 depend: .depend
 
 .depend: .prepare $(patsubst %,$(SRC_DIR)/%.ml,$(PRODUCTS))
@@ -100,7 +96,7 @@ $(SRC_DIR)/dll$(LIBRARY)_stubs.so: $(SRC_DIR)/lib$(LIBRARY)_stubs.a
 %.cmo: %.ml
 	$(OCAMLC_CMD) -c $< -o $@
 
-%.cmx: %.ml
+%.cmx: %.ml %.cmo
 	$(OCAMLOPT_CMD) -c $< -o $@
 
 %.o: %.c
