--- a/bundles/parmap/Makefile
+++ b/bundles/parmap/Makefile
@@ -21,5 +21,9 @@ include ../Makefile.bundles
 	cd $(SRC_DIR) && ./configure
 	touch $@
 
+distclean: clean
+	rm -rf $(PACKAGE_DIR)
+	rm -f .prepare
+
 $(SRC_DIR)/setcore.cmi $(SRC_DIR)/setcore.cmo: $(SRC_DIR)/setcore.ml
 	$(OCAMLC_CMD) -c $<
