Remove unused SHAREDIR variable and fix references to LIBDIR

--- a/scripts/spatch.sh.in
+++ b/scripts/spatch.sh.in
@@ -23,7 +23,7 @@ else
 
 export COCCINELLE_HOME
 
-export LD_LIBRARY_PATH="${LIBDIR}:$LD_LIBRARY_PATH:${SHAREDIR}:${COCCINELLE_HOME}"
+export LD_LIBRARY_PATH="${LIBDIR}:$LD_LIBRARY_PATH:${COCCINELLE_HOME}"
 export PYTHONPATH="${COCCINELLE_HOME}/python:$PYTHONPATH"
 
 # echo setting LD_LIBRARY_PATH="$LD_LIBRARY_PATH"
