--- a/docs/spatch.1.in
+++ b/docs/spatch.1.in
@@ -66,10 +66,10 @@ the semantic patch file
 process all files in directory recursively
 .TP
 .B \-\-iso\-file            \fI<file>\fP
-(default=@SHAREDIR@/standard.iso)
+(default=@LIBDIR@/standard.iso)
 .TP
 .B \-\-macro\-file          \fI<file>\fP
-(default=@SHAREDIR@/standard.h)
+(default=@LIBDIR@/standard.h)
 .TP
 .B \-\-debug
 print some information to help debug the matching process
@@ -121,7 +121,7 @@ show summary of options.
 Apply the semantic patch foo.cocci to the C file foo.c.  The semantic patch
 is applied modulo a set of isomorphisms contained in standard.iso
 (standard.iso is by default located in
-@SHAREDIR@/standard.iso).  A patch showing the effect of
+@LIBDIR@/standard.iso).  A patch showing the effect of
 the application, if any, will be generated on the standard output.
 
   ./spatch \-\-sp\-file foo.cocci foo.c -o /tmp/newfoo.c
@@ -593,11 +593,11 @@ Such a configuration file may look like this:
 .\}
 
 .SH FILES
-.I @SHAREDIR@/standard.iso
+.I @LIBDIR@/standard.iso
 .RS
 This file contains the default set of isomorphisms.
 .RE
-.I @SHAREDIR@/standard.h
+.I @LIBDIR@/standard.h
 .RS
 This file contains the default set of macro hints.
 .RE
@@ -608,7 +608,7 @@ This file contains the custom set of spatch options.
 .SH ENVIRONMENT
 .IP COCCINELLE_HOME
 The path to the Coccinelle share directory. Default is
-.I @SHAREDIR@
+.I @LIBDIR@
 
 .SH REFERENCES
 Y. Padioleau, J.L. Lawall, R.R Hansen, G. Muller.
