--- a/bundles/pyml/pyml-current/Makefile
+++ b/bundles/pyml/pyml-current/Makefile
@@ -1,6 +1,6 @@
 OCAMLFIND=ocamlfind
 
-HAVE_OCAMLFIND=$(shell \
+HAVE_OCAMLFIND:=$(shell \
 	if $(OCAMLFIND) query -help >/dev/null 2>&1; then \
 		echo yes; \
 	else \
@@ -8,59 +8,67 @@ HAVE_OCAMLFIND=$(shell \
 	fi \
 )
 
-OCAMLC=$(shell \
-	if [ "$(HAVE_OCAMLFIND)" = yes ]; then \
-		echo $(OCAMLFIND) ocamlc; \
-	elif ocamlc.opt -version >/dev/null 2>&1; then \
-		echo ocamlc.opt; \
-	else \
-		echo ocamlc; \
-	fi \
-)
-OCAMLOPT=$(shell \
-	if [ "$(HAVE_OCAMLFIND)" = yes ]; then \
-		echo $(OCAMLFIND) ocamlopt; \
-	elif ocamlopt.opt -version >/dev/null 2>&1; then \
-		echo ocamlopt.opt; \
-	else \
-		echo ocamlopt; \
-	fi \
-)
-OCAMLMKLIB=$(shell \
-	if [ "$(HAVE_OCAMLFIND)" = yes ]; then \
-		echo $(OCAMLFIND) ocamlmklib; \
-	else \
-		echo ocamlmklib; \
-	fi \
-)
-OCAMLDEP=$(shell \
-	if [ "$(HAVE_OCAMLFIND)" = yes ]; then \
-		echo $(OCAMLFIND) ocamldep; \
-	else \
-		echo ocamldep; \
-	fi \
-)
-OCAMLDOC=$(shell \
-	if [ "$(HAVE_OCAMLFIND)" = yes ]; then \
-		echo $(OCAMLFIND) ocamldoc; \
-	else \
-		echo ocamldoc; \
-	fi \
-)
+ifneq ($(HAVE_OCAMLFIND),no)
+	OCAMLC=$(OCAMLFIND) ocamlc
+	ifneq ($(HAVE_OCAMLOPT),no)
+		OCAMLOPTEXE=$(OCAMLFIND) ocamlopt
+	endif
+	OCAMLMKLIB=$(OCAMLFIND) ocamlmklib
+	OCAMLDEP=$(OCAMLFIND) ocamldep
+	OCAMLDOC=$(OCAMLFIND) ocamldoc
+else
+	OCAMLC:=$(shell \
+		if ocamlc.opt -version >/dev/null 2>&1; then \
+			echo ocamlc.opt; \
+		elif ocamlc -version >/dev/null 2>&1; then \
+			echo ocamlc; \
+		fi \
+	)
+	ifeq ($(OCAMLC),)
+		$(error There is no OCaml compiler available in path)
+	endif
+	ifneq ($(HAVE_OCAMLOPT),no)
+		OCAMLOPTEXE:=$(shell \
+			if ocamlopt.opt -version >/dev/null 2>&1; then \
+				echo ocamlopt.opt; \
+			elif ocamlopt -version >/dev/null 2>&1; then \
+				echo ocamlopt; \
+			fi \
+		)
+	endif
+	OCAMLMKLIB=ocamlmklib
+	OCAMLDEP=ocamldep
+	OCAMLDOC=ocamldoc
+endif
 
-MODULES=pyml_compat pytypes pywrappers py pycaml_compat
-GENERATED=pyml_dlsyms.inc pyml_wrappers.inc pyml.h
+ifeq ($(OCAMLOPTEXE),)
+	OCAMLOPT=$(error There is no optimizing OCaml compiler available)
+	OCAMLCOPT=$(OCAMLC)
+	CMOX=cmo
+	CMAX=cma
+	ALLOPT=
+	TESTSOPT=
+else
+	OCAMLOPT=$(OCAMLOPTEXE)
+	OCAMLCOPT=$(OCAMLOPT)
+	CMOX=cmx
+	CMAX=cmxa
+	ALLOPT=all.native
+	TESTSOPT=tests.native
+endif
 
-VERSION=$(shell date "+%Y%m%d")
+MODULES=pyml_compat pytypes pywrappers py pycaml
+
+VERSION:=$(shell date "+%Y%m%d")
 
 OCAMLLIBFLAGS=-cclib "-L. -lpyml_stubs"
 
 OCAMLLIBFLAGSNATIVE=$(OCAMLLIBFLAGS)
 OCAMLLIBFLAGSBYTECODE=-custom $(OCAMLLIBFLAGS)
 
-OCAMLVERSION=$(shell $(OCAMLC) -version)
+OCAMLVERSION:=$(shell $(OCAMLC) -version)
 
-PYML_COMPAT=$(shell \
+PYML_COMPAT:=$(shell \
 	if [ "$(OCAMLVERSION)" "<" 4.00.0 ]; then \
 		echo pyml_compat312.ml; \
 	elif [ "$(OCAMLVERSION)" "<" 4.03.0 ]; then \
@@ -70,29 +78,89 @@ PYML_COMPAT=$(shell \
 	fi \
 )
 
-all: py.cmi pycaml_compat.cmi pyml.cma pyml.cmxa pyml.cmxs doc
+.PHONY: all
+all: all.bytecode $(ALLOPT)
+	@echo The py.ml library is compiled.
+	@echo Run \`make doc\' to build the documentation.
+	@echo Run \`make tests\' to check the test suite.
+ifneq ($(HAVE_OCAMLFIND),no)
+	@echo Run \`make install\' to install the library via ocamlfind.;
+endif
 
-.PHONY: all tests tests.bytecode clean install
+.PHONY: help
+help:
+	@echo make [all] : build the library
+	@echo make all.bytecode : build only the bytecode library
+	@echo make all.native : build only the native library
+	@echo make doc : build the documentation
+	@echo make install : install the library via ocamlfind
+	@echo make clean : remove all the generated files
+	@echo make tests : compile and run the test suite
+	@echo make tests.bytecode : run only the bytecode version of the tests
+	@echo make tests.native : run only the native version of the tests
+	@echo make HAVE_OCAMLFIND=no : disable ocamlfind
+	@echo make HAVE_OCAMLOPT=no : disable ocamlopt
+	@echo "make OCAMLC|OCAMLOPT|OCAMLMKLIB|OCAMLDEP|OCAMLDOC=... :"
+	@echo "  set paths to OCaml tools"
+	@echo make OCAMLCFLAGS=... : set flags to OCaml compiler for compiling
+	@echo make OCAMLLDFLAGS=... : set flags to OCaml compiler for linking
+	@echo make OCAMLLIBFLAGS=... :
+	@echo "  set flags to OCaml compiler for building the library"
 
-tests: pyml_tests
-	./pyml_tests
+.PHONY: all.bytecode
+all.bytecode: pyml.cma
 
+.PHONY: all.native
+all.native: pyml.cmxa pyml.cmxs
+
+.PHONY: tests
+tests: tests.bytecode $(TESTSOPT)
+
+.PHONY: tests.bytecode
 tests.bytecode: pyml_tests.bytecode
 	./pyml_tests.bytecode
 
-doc: py.mli pycaml_compat.mli pywrappers.ml
-	mkdir -p $@
-	$(OCAMLDOC) -html -d $@ $^
-	touch $@
+.PHONY: tests.native
+tests.native: pyml_tests.native
+	./pyml_tests.native
 
+.PHONY: install
 install:
+ifeq ($(HAVE_OCAMLFIND),no)
+	$(error ocamlfind is needed for 'make install')
+endif
 	$(OCAMLFIND) install pyml \
 		py.mli \
-		py.cmi pytypes.cmi pywrappers.cmi pycaml_compat.cmi \
-		py.cmx pytypes.cmx pywrappers.cmx pycaml_compat.cmx \
+		py.cmi pytypes.cmi pywrappers.cmi pycaml.cmi \
+		py.cmx pytypes.cmx pywrappers.cmx pycaml.cmx \
 		pyml.cma pyml.cmxa pyml.cmxs pyml.a \
 		libpyml_stubs.a dllpyml_stubs.so \
 		META
+
+.PHONY: clean
+clean:
+	for module in $(MODULES) generate pyml_tests; do \
+		rm -f $$module.cmi $$module.cmo $$module.cmx $$module.a \
+			$$module.o; \
+	done
+	rm -f pyml.cma pyml.cmxa pyml.cmxs pyml.a
+	rm -f pywrappers.mli pywrappers.ml pyml_dlsyms.inc pyml_wrappers.inc
+	rm -f pyml.h
+	rm -f pyml_stubs.o dllpyml_stubs.so libpyml_stubs.a
+	rm -f pyml_compat.ml
+	rm -f generate pyml_tests pyml_tests.bytecode
+	rm -f .depend
+	rm -rf doc
+
+.PHONY: tarball
+tarball:
+	git archive --format=tar.gz --prefix=pyml-$(VERSION)/ HEAD \
+		>pyml-$(VERSION).tar.gz
+
+doc: py.mli pycaml.mli pywrappers.ml
+	mkdir -p $@
+	$(OCAMLDOC) -html -d $@ $^
+	touch $@
 
 ifneq ($(MAKECMDGOALS),clean)
 -include .depend
@@ -101,40 +169,14 @@ endif
 .depend: $(MODULES:=.ml) $(MODULES:=.mli) pyml_tests.ml
 	$(OCAMLDEP) $^ >$@
 
-clean:
-	rm -f py.cmi py.cmx py.cmo py.a py.o
-	rm -f pyml.cma pyml.cmxa
-	rm -f pytypes.cmi pytypes.cmo pytypes.cmx pytypes.o
-	rm -f pywrappers.mli pywrappers.ml pywrappers.cmi pywrappers.cmo
-	rm -f pywrappers.cmx pywrappers.o
-	rm -f pyml_stubs.o
-	rm -f generate.cmi generate.cmx
-	rm -f pyml_compat.ml pyml_compat.cmi pyml_compat.cmo pyml_compat.cmx
-	rm -f pyml_compat.o
-	rm -f pycaml_compat.cmi pycaml_compat.cmx pycaml_compat.cmo
-	rm -f pycaml_compat.a pycaml_compat.o
-	rm -f pyml_tests.cmi pyml_tests.cmx pyml_tests.cmo pyml_tests.a
-	rm -f pyml_tests.o
-	rm -f $(GENERATED)
-	rm -f .depend
-	rm -rf doc
+generate: pyml_compat.$(CMOX) generate.$(CMOX)
+	$(OCAMLCOPT) $^ -o $@
 
-tarball:
-	mkdir pyml-$(VERSION)/
-	cp Makefile pyml_compat312.ml pyml_compat400.ml pyml_compat403.ml \
-		pyml_compat.mli \
-		generate.ml py.ml py.mli pyml_stubs.c pytypes.ml pytypes.mli \
-		pyml_tests.ml test.py \
-		pycaml_compat.ml pycaml_compat.mli README LICENSE META \
-		pyml-$(VERSION)/
-	rm -f pyml-$(VERSION).tar.gz
-	tar -czf pyml-$(VERSION).tar.gz pyml-$(VERSION)/
-	rm -rf pyml-$(VERSION)/
+generate.cmo: generate.ml pyml_compat.cmo
 
-generate: pyml_compat.cmx generate.cmx
-	$(OCAMLOPT) $^ -o $@
+generate.cmx: generate.ml pyml_compat.cmx
 
-generate.cmx: generate.ml pyml_compat.cmi pyml_compat.cmx
+pyml_compat.cmo pyml_compat.cmx: pyml_compat.cmi
 
 pywrappers.ml pyml_wrappers.inc: generate
 	./generate
@@ -144,11 +186,12 @@ pyml_wrappers.inc: pywrappers.ml
 pywrappers.mli: pywrappers.ml pytypes.cmi
 	$(OCAMLC) -i $< >$@
 
-pyml_tests: py.cmi pyml.cmxa pyml_tests.cmx
-	$(OCAMLOPT) $(OCAMLLDFLAGS) unix.cmxa pyml.cmxa pyml_tests.cmx -o $@
+pyml_tests.native: py.cmi pyml.cmxa pyml_tests.cmx
+	$(OCAMLOPT) $(OCAMLLDFLAGS) unix.cmxa pyml.cmxa \
+		pyml_tests.cmx -o $@
 
 pyml_tests.bytecode: py.cmi pyml.cma pyml_tests.cmo
-	$(OCAMLC) unix.cma pyml.cma pyml_tests.cmo -o $@
+	$(OCAMLC) $(OCAMLLDFLAGS) unix.cma pyml.cma pyml_tests.cmo -o $@
 
 pyml_compat.ml: $(PYML_COMPAT)
 	cp $< $@
