Fixed: Bundles OCAMLCFLAGS and OCAMLOPTFLAGS
OCAMLCFLAGS and OCAMLOPTFLAGS were not included in the compilation
commands for bundles.

--- a/bundles/Makefile.bundles
+++ b/bundles/Makefile.bundles
@@ -2,15 +2,15 @@ MARKER=$(PACKAGE_DIR)/.marker
 
 OCAMLFLAGS+=-I $(SRC_DIR)
 OCAMLC_CMD= \
-	$(OCAMLC) $(OCAMLFLAGS) \
+	$(OCAMLC) $(OCAMLCFLAGS) $(OCAMLFLAGS) \
 	$(patsubst %,-custom -cclib -l%_stubs,$(LIBRARY)) \
 	$(EXTRACFLAGS)
 OCAMLOPT_CMD= \
-	$(OCAMLOPT) $(OCAMLFLAGS) \
+	$(OCAMLOPT) $(OCAMLOPTFLAGS) $(OCAMLFLAGS) \
 	$(patsubst %,-cclib -l%_stubs,$(LIBRARY)) \
 	$(EXTRACFLAGS)
 OCAMLMKLIB_CMD=$(OCAMLMKLIB) -linkall $(EXTRALNKFLAGS)
-OCAMLDEP_CMD=$(OCAMLDEP) $(OCAMLFLAGS)
+OCAMLDEP_CMD=$(OCAMLDEP) $(OCAMLDEPFLAGS) $(OCAMLFLAGS)
 
 OCAMLCCFLAGS+=-ccopt -fPIC
 
