clean up error reporting for isos

--- a/parsing_cocci/Makefile
+++ b/parsing_cocci/Makefile
@@ -19,8 +19,8 @@ PARSER_SOURCES = parser_cocci_menhir.mly
 SOURCES = flag_parsing_cocci.ml ast_cocci.ml ast0_cocci.ml \
 pretty_print_cocci.ml visitor_ast0_types.ml \
 visitor_ast.ml visitor_ast0.ml ast0toast.ml unparse_ast0.ml unify_ast.ml \
-compute_lines.ml comm_assoc.ml \
-iso_pattern.ml iso_compile.ml single_statement.ml simple_assignments.ml \
+compute_lines.ml iso_pattern.ml comm_assoc.ml \
+iso_compile.ml single_statement.ml simple_assignments.ml \
 get_metas.ml stmtlist.ml check_meta.ml top_level.ml \
 type_infer.ml test_exps.ml unitary_ast0.ml arity.ml index.ml context_neg.ml \
 adjust_pragmas.ml insert_plus.ml function_prototypes.ml \
