Fix pcre dependency on bytes for OCaml <= 4.01
The pcre package shipped with OPAM depends on the bytes compatibility
package to compile on OCaml <= 4.01.

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -118,6 +118,7 @@ PARMAPDIR=@PATH_parmap@
 PYMLDIR=@PATH_pyml@
 MENHIRDIR=@PATH_menhirLib@
 DYNLINKDIR=@PATH_dynlink@
+BYTESDIR=@PATH_bytes@
 
 # selected ocaml modules
 PYCOCCI_FILE=@PYCOCCI_FILE@
