--- a/configure.ac
+++ b/configure.ac
@@ -330,9 +330,22 @@ AS_IF([test "x$enable_pcre_syntax" != "xno"],
     AC_CHECK_COCCI_EXTPKG([pcre])  dnl  will set $enable_pcre to 'yes', 'no', or 'local'
     AS_IF([test "x$enable_pcre" == "xyes"],
     [dnl
+      AC_MSG_CHECKING([if pcre depends on bytes])
       AS_IF([test "x`$OCAMLFIND query -r -format '%p' pcre 2>/dev/null | grep bytes`" == "xbytes"],
       [dnl
-        AC_CHECK_COCCI_EXTPKG([bytes])
+        AC_MSG_RESULT([yes])
+        AC_MSG_CHECKING([if bytes is an actual module])
+        AS_IF([test -f "`$OCAMLFIND query bytes`/bytes.cma"],
+        [dnl
+          AC_MSG_RESULT([yes])
+          AC_CHECK_COCCI_EXTPKG([bytes])
+        ],
+        [dnl
+          AC_MSG_RESULT([no])
+        ])
+      ],
+      [dnl
+        AC_MSG_RESULT([no])
       ])
     ])
   ])
