--- a/bundles/Makefile.bundles
+++ b/bundles/Makefile.bundles
@@ -23,7 +23,8 @@ all: depend
 all-build: all-build-targets $(OTHERS)
 all-build-targets: \
 	$(patsubst %,$(SRC_DIR)/%.cma,$(ARCHIVE)) \
-	$(patsubst %,$(SRC_DIR)/%,$(SIDEPRODUCTS))
+	$(patsubst %,$(SRC_DIR)/%,$(SIDEPRODUCTS)) \
+	$(patsubst %,$(SRC_DIR)/%,$(SIDEPRODUCTS_BYTECODE))
 	cp $^ .
 	- if [ -n "$(LIBRARY)" ]; then \
 	  cp $(patsubst %,$(SRC_DIR)/dll%_stubs.so,$(LIBRARY)) .; \
@@ -36,20 +37,25 @@ all-opt-build-targets: \
 	$(patsubst %,$(SRC_DIR)/%.cmxa,$(ARCHIVE)) \
 	$(patsubst %,$(SRC_DIR)/%.cmx,$(INTERFACES)) \
 	$(patsubst %,$(SRC_DIR)/%.a,$(LIBRARY)) \
-	$(patsubst %,$(SRC_DIR)/%,$(SIDEPRODUCTS))
+	$(patsubst %,$(SRC_DIR)/%,$(SIDEPRODUCTS)) \
+	$(patsubst %,$(SRC_DIR)/%,$(SIDEPRODUCTS_NATIVE))
 	cp $^ .
 	- if [ -n "$(LIBRARY)" ]; then \
 	  cp $(patsubst %,$(SRC_DIR)/dll%_stubs.so,$(LIBRARY)) .; \
 	fi
 
 clean:
-	rm -f .depend $(ARCHIVE:=.cma) $(ARCHIVE:=.cmxa) $(SIDEPRODUCTS)
-	rm -f $(INTERFACES:=.cmx) $(LIBRARY:=.a) $(CLEANOTHERS)
-	rm -f $(patsubst %,$(SRC_DIR)/%.ml,$(PRODUCTS)) $(OTHERS)
-	rm -f $(patsubst %,dll%_stubs.so,$(LIBRARY))
-	rm -f $(patsubst %,$(SRC_DIR)/%.cmi,$(MODULES))
-	rm -f $(patsubst %,$(SRC_DIR)/%.cmx,$(MODULES))
-	rm -f $(patsubst %,$(SRC_DIR)/%.cmo,$(MODULES))
+	rm -f .depend $(ARCHIVE:=.cma) $(ARCHIVE:=.cmxa) \
+		$(SIDEPRODUCTS) $(SIDEPRODUCTS_NATIVE) \
+		$(SIDEPRODUCTS_BYTECODE) \
+		$(INTERFACES:=.cmx) $(LIBRARY:=.a) $(CLEANOTHERS) \
+		$(patsubst %,$(SRC_DIR)/%.ml,$(PRODUCTS)) $(OTHERS) \
+		$(patsubst %,dll%_stubs.so,$(LIBRARY)) \
+		$(patsubst %,$(SRC_DIR)/%.cmi,$(MODULES)) \
+		$(patsubst %,$(SRC_DIR)/%.cmx,$(MODULES)) \
+		$(patsubst %,$(SRC_DIR)/%.cmo,$(MODULES)) \
+		$(patsubst %,$(SRC_DIR)/%.cmt,$(MODULES)) \
+		$(patsubst %,$(SRC_DIR)/%.cmti,$(MODULES))
 
 depend: .depend
 
