Fix default for COCCINELLE_HOME and PYTHONPATH
The default value for COCCINELLE_HOME was never correct.
The path of the executable (Sys.argv.(0)) is now used if this
directory contains standard.iso (typical case for development),
or else the path "../lib/coccinelle" relatively to the path of the
executable (typical case when Coccinelle is installed).

$COCCINELLE_HOME/python is added to PYTHONPATH if this path is not
already included.

These two changes make the spatch executable usable without
initialization script.

--- a/globals/config.ml.in
+++ b/globals/config.ml.in
@@ -2,7 +2,17 @@ let version = "@COCCI_VERSION@"
 
 let path =
   try (Sys.getenv "COCCINELLE_HOME")
-  with Not_found->"@libdir@/coccinelle"
+  with Not_found->
+    (* was "@libdir@/coccinelle": incorrect, since "@libdir@" expands into
+       "${exec_prefix}/lib" (litteraly, without further expansion, that is
+       unlikely to be a valid path! *)
+    let exec_dir = Filename.dirname Sys.argv.(0) in
+    if Sys.file_exists (Filename.concat exec_dir "standard.iso") then
+      exec_dir
+    else
+      List.fold_left Filename.concat exec_dir
+	[Filename.parent_dir_name; "lib"; "coccinelle"]
+
 
 let std_iso = ref (Filename.concat path "standard.iso")
 let std_h   = ref (Filename.concat path "standard.h")
