--- a/engine/Makefile
+++ b/engine/Makefile
@@ -11,8 +11,8 @@ include ../Makefile.config
 -include ../Makefile.local
 endif
 
-TARGET=cocciengine
-CTLTARGET=engine
+TARGET::=engine
+TARGET_ALIAS::=cocciengine
 
 SRC= flag_matcher.ml lib_engine.ml pretty_print_engine.ml \
       check_exhaustive_pattern.ml \
@@ -58,21 +58,21 @@ OPTOBJS = $(SRC:.ml=.cmx)
 ##############################################################################
 # Top rules
 ##############################################################################
-all: $(TARGET).cma
+all: $(TARGET_ALIAS).cma
 all.opt:
-	@$(MAKE) $(TARGET).cmxa BUILD_OPT=yes
+	@$(MAKE) $(TARGET_ALIAS).cmxa BUILD_OPT=yes
 
-$(TARGET).cma: $(OBJS)
-	$(OCAMLC_CMD) -a -o $(TARGET).cma $(OBJS)
+$(TARGET_ALIAS).cma: $(OBJS)
+	$(OCAMLC_CMD) -a -o $(TARGET_ALIAS).cma $(OBJS)
 
-$(TARGET).cmxa: $(OPTOBJS) $(LIBS:.cma=.cmxa)
-	$(OCAMLOPT_CMD) -a -o $(TARGET).cmxa $(OPTOBJS)
+$(TARGET_ALIAS).cmxa: $(OPTOBJS) $(LIBS:.cma=.cmxa)
+	$(OCAMLOPT_CMD) -a -o $(TARGET_ALIAS).cmxa $(OPTOBJS)
 
-$(TARGET).top: $(OBJS) $(LIBS)
-	$(OCAMLMKTOP_CMD) -o $(TARGET).top $(SYSLIBS) $(LIBS) $(OBJS)
+$(TARGET_ALIAS).top: $(OBJS) $(LIBS)
+	$(OCAMLMKTOP_CMD) -o $(TARGET_ALIAS).top $(SYSLIBS) $(LIBS) $(OBJS)
 
 clean::
-	rm -f $(TARGET).top
+	rm -f $(TARGET_ALIAS).top
 
 ##############################################################################
 # Pad's rules
@@ -84,15 +84,9 @@ clean::
 
 .SUFFIXES: .ml .mli .cmo .cmi .cmx
 
-.ml.cmo:
-	$(OCAMLC_CMD) -c $<
-.mli.cmi:
-	$(OCAMLC_CMD) -c $<
-.ml.cmx:
-	$(OCAMLOPT_CMD) -c $<
-
-.ml.mldepend:
-	$(OCAMLC_CMD) -i $<
+ifneq ($(strip $(abs_top_srcdir)),)
+include $(abs_top_srcdir)/modules_with_mli.make
+endif
 
 clean::
 	rm -f *.cm[ioxa] *.o *.a *.cmxa *.annot
